# vitibot

./: README.md
1 - Radar/: README.md  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt
2 - Régression linéaire/: README.md  index.html
problems/: README-EN.md  README.md
problems/1 - Radar/: README-en.md  README.md  input2.txt  input3.txt  output3.txt  output5.txt
problems/2 - Régression linéaire/: README-en.md
solutions/linear_regression/: CMakeLists.txt
solutions/linear_regression/data/: input.txt
solutions/linear_regression/include/: LinearRegression.h
solutions/linear_regression/src/: LinearRegression.cpp  main.cpp
solutions/radar/: CMakeLists.txt
solutions/radar/data/: input1.txt  input4.txt  input5.txt  output1.txt  output2.txt  output4.txt
solutions/radar/include/: radar.h
solutions/radar/src/: main.cpp  radar.cpp
